Prevent wrapping of 'view all' button

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -1744,7 +1744,7 @@ div.list-view td.state.off span {
   position: relative;
   top: 9px;
   float: left;
-  width: 291px;
+  width: 245px;
 }
 
 .detail-group .main-groups table td.value .view-all {
